# chinju

./: .dockerignore  .gitignore  CHINJU_Charter_v1.0.md  CHINJU_憲章.md  CHINJU_憲章_v1.0.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  Cargo.toml  FINAL_REVIEW_REPORT.md  LICENSE  README.md  README_EN.md  c13_AIモデル封じ込めシステム.md  c13_実装ガイド_落とし穴対策.md  c2_AI提示選択肢の中立性・多様性保証システムおよび方法.md  c3_形式的人間判断下における実質的AI支配の検出システムおよび方法.md  c4_権限分散型ＡＩ管理システムおよび合意形成プロトコル.md  c6_敵対的監査による出力均衡化システムおよびバイアス相殺方法.md  c9_国地域ポリシーパックによる制約差し替えおよび認証ゲートシステム.md  deny.toml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: markdown-links.yml  security.yml
chinju-core/: Cargo.toml  Dockerfile.test
chinju-core/examples/: mock_demo.rs  nitro_test.rs
chinju-core/src/: crypto.rs  lib.rs  types.rs
chinju-core/src/hardware/: dead_mans_switch.rs  mod.rs  physical_kill_switch.rs  provider.rs  traits.rs
chinju-core/src/hardware/mock/: hsm.rs  mod.rs  otp.rs  random.rs
chinju-core/src/hardware/nitro/: attestation.rs  attestation_policy.rs  client.rs  error.rs  hsm.rs  kms.rs  mod.rs  protocol.rs  vsock.rs
chinju-core/src/hardware/softhsm/: hsm.rs  mod.rs  session.rs
chinju-core/src/hardware/threshold/: ceremony.rs  evidence.rs  frost.rs  key_share.rs  mod.rs
chinju-core/src/hardware/tpm/: context.rs  dead_mans_switch.rs  hsm.rs  mod.rs  pcr.rs
chinju-core/tests/: tpm_integration.rs
chinju-enclave/: Cargo.toml  Dockerfile.enclave
chinju-enclave/src/: key_manager.rs  kms_client.rs  lib.rs  main.rs  nsm.rs  protocol.rs
chinju-enclave/src/handlers/: mod.rs
chinju-sidecar/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
chinju-sidecar/src/: config.rs  constants.rs  error.rs  ids.rs  lib.rs  lock_order.rs  main.rs
chinju-sidecar/src/services/: analog_sanitizer.rs  capability_evaluator.rs  capability_test.rs  contradiction_controller.rs  credential.rs  extraction_deterrent.rs  gateway.rs  http_server.rs  lpt_monitor.rs  metrics.rs  mod.rs  nitro.rs  openai_client.rs  openai_types.rs  sanitizer.rs  side_channel.rs  survival_attention.rs  token.rs  value_neuron_monitor.rs  zkp.rs
chinju-sidecar/src/services/audit/: chain.rs  logger.rs  mod.rs  persister.rs  types.rs
chinju-sidecar/src/services/audit/storage/: file.rs  mod.rs
chinju-sidecar/src/services/gateway/: containment_checker.rs  mod.rs  request_processor.rs  service.rs
chinju-sidecar/src/services/policy/: engine.rs  mod.rs  provider.rs  revocation.rs  signature.rs  versioning.rs
chinju-sidecar/src/services/policy/providers/: file.rs  mod.rs
chinju-sidecar/src/services/signature/: convert.rs  mod.rs  service.rs  threshold.rs
chinju-sidecar/tests/: c13_integration.rs  c16_integration.rs  e2e_service_flow.rs  grpc_integration.rs  lock_order_test.rs  performance_tests.rs  property_tests.rs  proto_compat.rs
chinju-vllm/: .gitignore  LICENSE  README.md  pyproject.toml
chinju-vllm/.github/workflows/: ci.yml
chinju-vllm/chinju_vllm/: __init__.py  activation_hook.py  constants.py  grpc_client.py  protocols.py  survival_attention.py  value_neuron_detector.py
chinju-vllm/chinju_vllm/proto/: __init__.py
chinju-vllm/chinju_vllm/proto/chinju/: __init__.py  capability_pb2.py  capability_pb2_grpc.py  common_pb2.py  common_pb2_grpc.py  contradiction_pb2.py  contradiction_pb2_grpc.py  survival_attention_pb2.py  survival_attention_pb2_grpc.py  value_neuron_pb2.py  value_neuron_pb2_grpc.py
chinju-vllm/chinju_vllm/proto/chinju/api/: __init__.py  capability_service_pb2.py  capability_service_pb2_grpc.py  contradiction_service_pb2.py  contradiction_service_pb2_grpc.py  survival_attention_service_pb2.py  survival_attention_service_pb2_grpc.py  value_neuron_service_pb2.py  value_neuron_service_pb2_grpc.py
chinju-vllm/docs/: C14_C16_INTEGRATION.md
chinju-vllm/tests/: __init__.py  conftest.py  test_activation_hook.py  test_grpc_client.py  test_integration.py  test_sidecar_integration.py  test_survival_attention.py  test_value_neuron_detector.py
deploy/terraform/: nitro_kms.tf  terraform.tfvars.example
docs/: AUDIT_INTEGRITY.md  NITRO_ENCLAVES.md
docs/demo/: README.md  README_v3.md  demo_collapse_v2.py  demo_collapse_v3.py  structural_collapse_v2.cast  structural_collapse_v3.cast
en/: c10_concept_definition_immutability_proof_system.md  c1_human_capability_assurance_layer_system.md  c2_ai_choice_neutrality_diversity_assurance_system.md  c5_resource_dependent_survival_protocol.md  c6_adversarial_audit_output_balancing_system.md
papers/: Makefile  README.md  chinju_framework.aux  chinju_framework.out  chinju_framework.tex  chinju_framework_ja.aux  chinju_framework_ja.out  chinju_framework_ja.tex
patents/: CHINJU_Executive_Summary.md  CHINJU_Executive_Summary_JP.md  CHINJU_Security_Whitepaper.md  CHINJU_Security_Whitepaper_EN.md  特許の概要・ロジック説明資料.md
patents/en/: c11_large_language_model_reliability_maintenance_system.md  c12_human_subject_integrated_authentication_system.md  c13_ai_model_containment_system.md  c14_multi_capability_evaluation_system.md  c15_value_neuron_monitoring_system.md  c16_structural_contradiction_injection_system.md  c17_survival_weighted_attention_system.md  c3_semantic_ai_domination_detection_system.md  c4_distributed_authority_ai_management_system.md  c7_data_sovereignty_learning_refusal_system.md  c8_metric_definition_registry_system.md  c9_regional_policy_pack_system.md
patents/ja/: c10_概念定義不変性証明システムおよび意味的改ざん防止方法.md  c11_大規模言語モデル信頼性維持システム.md  c12_人間主体統合認証システムおよび同一性有限性複合証明方法.md  (+9 more)
protocol/: CHINJU-000-TRUST_MODEL.md  CHINJU-001-ARCHITECTURE.md  CHINJU-002-DATA_FORMATS.md  CHINJU-003-STATE_MACHINES.md  CHINJU-004-API.md  CHINJU-005-HARDWARE.md  CHINJU-005a-HARDWARE_IMPL_GUIDE.md  CHINJU-006-C14_MULTI_CAPABILITY.md  CHINJU-007-C15_VALUE_NEURON.md  CHINJU-008-C16_CONTRADICTION.md  CHINJU-009-C17_SURVIVAL_ATTENTION.md  README.md
scripts/: setup-nitro-enclave.sh  setup-vsock-proxy.sh  test-nitro-vsock.sh  test-tpm.sh
(+47 files in other folders)
