[package]
name = "chinju-core"
version = "0.1.0"
edition = "2021"
authors = ["CHINJU Protocol Contributors"]
description = "Core library for CHINJU Protocol - AI safety and governance"
license = "Apache-2.0"
repository = "https://github.com/chinju-protocol/chinju-core"
keywords = ["ai-safety", "governance", "hsm", "security"]
categories = ["cryptography", "authentication"]

[dependencies]
# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
sha3 = "0.10"
sha1 = "0.10"
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# Async
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

[features]
default = ["mock"]
mock = []
hardware = []

# L1: Software HSM (SoftHSM2 via PKCS#11)
softhsm = ["dep:cryptoki"]

# Threshold signatures (FROST)
frost = ["dep:frost-core", "dep:frost-ed25519"]

# L2: TPM 2.0 (swtpm compatible)
tpm = ["dep:tss-esapi"]

# L3: YubiHSM 2
yubihsm = ["dep:yubihsm"]

# L3: AWS Nitro Enclaves
nitro = ["dep:vsock", "dep:serde_cbor", "dep:hex", "dep:tracing-subscriber"]

[dependencies.cryptoki]
version = "0.7"
optional = true
features = ["generate-bindings"]

[dependencies.frost-core]
version = "2.0"
optional = true

[dependencies.frost-ed25519]
version = "2.0"
optional = true

[dependencies.tss-esapi]
version = "7.5"
optional = true

[dependencies.yubihsm]
version = "0.42"
optional = true
features = ["usb", "http"]

# Nitro Enclaves dependencies
[dependencies.vsock]
version = "0.4"
optional = true

[dependencies.serde_cbor]
version = "0.11"
optional = true

[dependencies.hex]
version = "0.4"
optional = true

[[example]]
name = "mock_demo"
path = "examples/mock_demo.rs"

[[example]]
name = "nitro_test"
path = "examples/nitro_test.rs"
required-features = ["nitro"]

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = ["env-filter"]
