[package]
name = "chinju-enclave"
version = "0.1.0"
edition = "2021"
authors = ["CHINJU Protocol Contributors"]
description = "CHINJU Protocol Nitro Enclave Application"
license = "Apache-2.0"
repository = "https://github.com/chinju-protocol/chinju-core"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
base64 = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# vsock (Unix socket-like for Enclave communication)
nix = { version = "0.27", features = ["socket"] }

# AWS Nitro Enclaves NSM API (only available on Nitro Enclaves)
# This will be enabled when building for actual Enclave
# aws-nitro-enclaves-nsm-api = { version = "0.4", optional = true }

[features]
default = ["mock"]
# Mock mode for local development (simulates NSM API)
mock = []
# Real NSM API (only works inside Nitro Enclave)
# nsm = ["dep:aws-nitro-enclaves-nsm-api"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
